# sawit-test

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
assets/: components.excalidraw  dashboard.json  dashboard.ndjson
src/: args.rs  elastic.rs  log_entry.rs  main.rs
