[package]
name = "sawit-log"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
reqwest = "0.11"
dotenv = "0.15"
base64 = "0.22.1"
chrono = "0.4.38"
once_cell = "1.8.0"
